--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Battleground Website</title>
+    <link rel="stylesheet" href="index-style/style.css">
 </head>
 <body>
-    
+    <div class="main-container">
+
+    </div>
 </body>
 </html>
