feature kv created, desktop and mobile adjusted

--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleground Website</title>
-    <link rel="stylesheet" href="index-style/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="index-style/style.css" />
+    <link rel="stylesheet" href="features/kv/style.css">
+  </head>
+  <body>
     <div class="main-container">
-
+      <section class="key-visual">
+        <div class="key-visual__text-wrap">
+            <div class="key-visual__headline">
+                <h1>Magic Forest</h1>
+            </div>
+            <div class="key-visual__sub-headline">
+                <p>Your last journey...</p>
+            </div>
+        </div>
+      </section>
     </div>
-</body>
+  </body>
 </html>
