--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleground Website</title>
     <link rel="stylesheet" href="index-style/style.css" />
-    <link rel="stylesheet" href="features/kv/style.css">
+    <link rel="stylesheet" href="features/kv/style.css" />
   </head>
   <body>
     <div class="main-container">
       <section class="key-visual">
         <div class="key-visual__text-wrap">
-            <div class="key-visual__headline">
-                <h1>Magic Forest</h1>
-            </div>
-            <div class="key-visual__sub-headline">
-                <p>Your last journey...</p>
-            </div>
+          <div class="key-visual__headline">
+            <h1>Magic Forest</h1>
+          </div>
+          <div class="key-visual__sub-headline">
+            <p>Your last journey...kropka</p>
+          </div>
         </div>
       </section>
     </div>
