zmiany 10.02, wieczor lapek

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <section class="key-visual">
         <div class="key-visual__text-wrap">
           <div class="key-visual__headline">
-            <h1>Magic Forest</h1>
+            <h1>Nowy headline z lapa</h1>
           </div>
           <div class="key-visual__sub-headline">
             <p>Your last journey...</p>
